--- a/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
@@ -5,12 +5,12 @@
     padding-left: 15px;
     padding-right: 15px;
     margin: 10px;
-    max-width: 250px;
+    max-width: 400px;
     text-align: left;
  }
  
  .set-card.table {
-   width: 100%;
+   width: 90%;
    border-collapse: collapse;
    border-radius: 10px;
  }
@@ -25,6 +25,19 @@
    border: 1px solid #3c3c3c; 
    padding: 8px;
    text-align: center; 
+ }
+
+ .set-card.title {
+  border: none;
+  border-collapse: collapse;
+  width: 90%;
+  padding: 8px;
+  text-align: center;
+ }
+
+ .exercise-name {
+  margin: 10px;
+  display: flex;
  }
  
  
