--- a/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
@@ -1,31 +1,43 @@
 .set-card {
-    border: 1px solid black;
-    border-radius: 10px;
-    padding-bottom: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 10px;
-    max-width: 250px;
-    text-align: left;
- }
- 
- .set-card.table {
-   width: 100%;
-   border-collapse: collapse;
-   border-radius: 10px;
- }
- 
- .set-card .row {
-   display: flex;
-   flex-direction: column; 
-   align-items: center; 
- }
- 
- .set-card.table th, .set-card.table td {
-   border: 1px solid #3c3c3c; 
-   padding: 8px;
-   text-align: center; 
- }
- 
- 
- 
+  /* border: 1px solid black; */
+  background-color: #5f5f5f;
+  color: white;
+  border-radius: 10px;
+  padding-bottom: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 10px;
+  width: 450px;
+  text-align: left;
+}
+
+.set-card.table {
+  width: 90%;
+  border-collapse: collapse;
+  border-radius: 10px;
+}
+
+.set-card .row {
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+}
+
+.set-card .table th, .set-card .table td {
+  background-color: rgb(106, 106, 106);
+  color: white;
+  border: 1px solid white; 
+  padding: 8px;
+  text-align: center; 
+}
+
+.set-card .table thead th {
+  border: none;
+  background-color: #5f5f5f;
+}
+
+.exercise-name {
+  padding-left: 20px;
+  padding-top: 20px;
+}
+
