Formatted workout page

--- a/Fitness-App/src/Components/Pages/WorkoutInput/Title.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/Title.css
@@ -7,3 +7,24 @@ h3 {
     font-size: 20px;
     margin: 10px;
 }
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+}
+
+.title-container {
+    flex: 1;
+}
+
+.button-container {
+    flex: 0;
+    margin: 10px;
+}
+
+.custom-size {
+    font-size: 14px;
+}
