--- a/Fitness-App/src/Components/Pages/WorkoutInput/Workout.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/Workout.css
@@ -3,3 +3,14 @@
     align-items: center;
     justify-content: center;
 }
+
+.split-half {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+}
+
+.exercise-section {
+    display: flex;
+    justify-content: center;
+}
