--- a/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
@@ -1,13 +1,13 @@
 .set-card {
   /* border: 1px solid black; */
-  background-color: #5f5f5f;
+  background-color: #124596;
   color: white;
   border-radius: 10px;
   padding-bottom: 15px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 10px;
-  width: 450px;
+  width: 500px;
   text-align: left;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .set-card .table th, .set-card .table td {
-  background-color: rgb(106, 106, 106);
+  background-color: #124596;
   color: white;
   border: 1px solid white; 
   padding: 8px;
@@ -33,7 +33,7 @@
 
 .set-card .table thead th {
   border: none;
-  background-color: #5f5f5f;
+  background-color: #124596;
 }
 
 .exercise-name {
@@ -41,3 +41,12 @@
   padding-top: 20px;
 }
 
+
+.add-row td {
+  background-color: #124596; 
+  border: none; 
+  text-align: center;
+  cursor: pointer; 
+  font-size: 14px; 
+  height: 20px;
+}
