--- a/Fitness-App/src/Components/Pages/WorkoutInput/Title.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/Title.css
@@ -23,8 +23,13 @@ h3 {
 .button-container {
     flex: 0;
     margin: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 250px;
 }
 
 .custom-size {
-    font-size: 14px;
+    font-size: 12px;
+    width: 60px; 
 }
