--- a/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
@@ -29,7 +29,30 @@
   border: 1px solid white; 
   padding: 8px;
   text-align: center; 
+  vertical-align: middle;
 }
+
+
+.set-card .table th:first-child, .set-card .table td:first-child {
+  width: 10%; 
+}
+
+.set-card .table th:nth-child(2), .set-card .table td:nth-child(2) {
+  width: 30%; 
+}
+
+.set-card .table th:nth-child(3), .set-card .table td:nth-child(3) {
+  width: 25%; 
+}
+
+.set-card .table th:nth-child(4), .set-card .table td:nth-child(4) {
+  width: 25%;
+}
+
+.set-card .table th:nth-child(5), .set-card .table td:nth-child(5) {
+  width: 10%; 
+}
+
 
 .set-card .table thead th {
   border: none;
@@ -39,6 +62,7 @@
 .exercise-name {
   padding-left: 20px;
   padding-top: 20px;
+  max-width: 90%;
 }
 
 
@@ -49,4 +73,20 @@
   cursor: pointer; 
   font-size: 14px; 
   height: 20px;
+}
+
+.set-card .table input {
+  width: 90%; 
+  box-sizing: border-box; 
+  padding: 8px;
+  text-align: center; 
+  background-color: #124596;
+  color: white;
+  border: 0px solid white;
+  outline: none;
+  font-size: 16px;
+}
+
+.set-card .table input::placeholder {
+  color: white;
 }
