--- a/Fitness-App/src/Footer.css
+++ b/Fitness-App/src/Footer.css
@@ -1,6 +1,8 @@
 .main-footer {
-    background: #f8f9fa;
-    padding: 20px 0;
+    background-color: #888888;
+    padding-top: 3em;
+    position: relative;
+    bottom: 0;
 }
 
 .container {
