--- a/Fitness-App/src/Footer.css
+++ b/Fitness-App/src/Footer.css
@@ -3,6 +3,7 @@
     padding-top: 3em;
     position: relative;
     bottom: 0;
+    width: 100%;
 }
 
 .container {
@@ -32,7 +33,7 @@
 
 hr {
     width: 100%;
-    margin: 20px 0;
+    margin: 10px 0; /* Reduced margin */
 }
 
 .column-small {
