--- a/Fitness-App/src/Components/Pages/WorkoutInput/Workout.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/Workout.css
@@ -1,23 +1,17 @@
-.split-half {
-    display: flex;
+.workout-split-half {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     width: 100%;
-    height: 100%;
-}
-
-.left-side, .right-side {
-    flex: 1;
-    padding: 20px;
-    box-sizing: border-box;
+    background-color: #f3f3f3;
 }
 
 .left-side {
     display: flex;
     flex-direction: column;
-    background-color: #f0f0f0;
 }
 
 .right-side {
-    background-color: #ffffff;
+    display: flex;
 }
 
 .title {
