--- a/Fitness-App/src/Footer.css
+++ b/Fitness-App/src/Footer.css
@@ -1,5 +1,5 @@
 .main-footer {
-    background-color: #888888;
+    background-color: rgb(234, 234, 234);
     padding-top: 3em;
     position: relative;
     bottom: 0;
