--- a/Fitness-App/src/Footer.css
+++ b/Fitness-App/src/Footer.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+body {
+    font-family: "Roboto Condensed", sans-serif;
+}
+
 .main-footer {
     background-color: rgb(234, 234, 234);
     padding-top: 3em;
