Added delete function still has bug. Must fix adding with IDs

--- a/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
@@ -96,3 +96,10 @@ body {
 .set-card .table input::placeholder {
   color: white;
 }
+
+.exercise-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 15px;
+}
