Changed set card color

--- a/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
+++ b/Fitness-App/src/Components/Pages/WorkoutInput/SetCard.css
@@ -6,7 +6,7 @@ body {
 
 .set-card {
   /* border: 1px solid black; */
-  background-color: #124596;
+  background-color: #0582CA;
   color: white;
   border-radius: 10px;
   padding-bottom: 15px;
@@ -30,7 +30,7 @@ body {
 }
 
 .set-card .table th, .set-card .table td {
-  background-color: #124596;
+  background-color: #0582CA;
   color: white;
   border: 1px solid white; 
   padding: 8px;
@@ -62,7 +62,7 @@ body {
 
 .set-card .table thead th {
   border: none;
-  background-color: #124596;
+  background-color: #0582CA;
 }
 
 .exercise-name {
@@ -73,7 +73,7 @@ body {
 
 
 .add-row td {
-  background-color: #124596; 
+  background-color: #0582CA; 
   border: none; 
   text-align: center;
   cursor: pointer; 
@@ -86,7 +86,7 @@ body {
   box-sizing: border-box; 
   padding: 8px;
   text-align: center; 
-  background-color: #124596;
+  background-color: #0582CA;
   color: white;
   border: 0px solid white;
   outline: none;
