--- a/Fitness-App/src/Components/Pages/LandingPage/LandingPage.css
+++ b/Fitness-App/src/Components/Pages/LandingPage/LandingPage.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+body {
+    font-family: "Roboto Condensed", sans-serif;
+}
+
 .landing-page {
-  font-family: Georgia, serif;
   text-align: center;
   background-color: #f0f0f0;
   height: 100vh;
