--- a/Fitness-App/src/assets/LandingPage.css
+++ b/Fitness-App/src/assets/LandingPage.css
@@ -27,15 +27,6 @@ body {
   padding: 1%;
   box-sizing: border-box;
 }
-/*
-.split-half > div:first-child {
-  background-color: #f0f0f0;
-}
-
-.split-half > div:last-child {
-  background-color: #ffffff;
-}
-*/
 
 .title {
   text-align: center;
@@ -77,6 +68,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  appearance: none;
 }
 
 .calendar-day.today {
@@ -84,7 +79,7 @@ body {
 }
 
 .calendar-day.has-event {
-  background-color: #f9f9f9;
+  background-color: #dff5ff;
 }
 
 .calendar-day .event {
@@ -98,6 +93,17 @@ body {
   white-space: normal;
   word-wrap: break-word;
   max-width: 100%;
+}
+
+.calendar-day:hover {
+  background-color: #89CFF0;
+  border-color: #000000; 
+}
+
+.calendar-day.empty {
+  background-color: transparent;
+  border: none;
+  pointer-events: none;
 }
 
 @media (max-width: 768px) {
