Header profile and resizing

--- a/Fitness-App/src/Pages/UserProfile/UserProfile.css
+++ b/Fitness-App/src/Pages/UserProfile/UserProfile.css
@@ -12,7 +12,7 @@ body {
 }
 
 .gradient {
-    background: linear-gradient(to bottom, #4b6cb7, #182848);
+    background: linear-gradient(to bottom, #184cc5, #01153b);
     border-radius: 10px;
     padding: 20px;
     text-align: center;
