--- a/Fitness-App/src/assets/UserProfile.css
+++ b/Fitness-App/src/assets/UserProfile.css
@@ -16,8 +16,9 @@ body {
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-    width: 80%;
-    max-width: 400px;
+    height: 50%;
+    width: 60%;
+    max-width: 350px;
     color: white;
 }
 
