--- a/Fitness-App/src/assets/UserProfile.css
+++ b/Fitness-App/src/assets/UserProfile.css
@@ -4,20 +4,34 @@ body {
     font-family: "Roboto Condensed", sans-serif;
 }
 
+.split-thirds {
+    display: flex;
+    height: 100vh;
+}
+
+.split-thirds > div {
+    flex: 1 1 33.33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1%;
+    box-sizing: border-box;
+}
+
 .UserCard {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
 }
 
 .gradient {
-    background: linear-gradient(to bottom, #184cc5, #01153b);
+    background: linear-gradient(to bottom, #3457D5, #052163);
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-    height: 50%;
-    width: 60%;
+    height: auto;
+    width: 100%;
     max-width: 350px;
     color: white;
 }
@@ -41,26 +55,23 @@ body {
     margin-bottom: 20px;
 }
 
-a {
-    color: #1e90ff;
-    text-decoration: none;
-    font-size: 16px;
+.weekly-workouts {
+    text-align: center;
+    margin-top: 40px;
+    border: 6px solid #3457D5;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: white;
 }
 
-a:hover {
-    text-decoration: underline;
+.weekly-workouts h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #3457D5;
 }
 
-@media (max-width: 768px) {
-    .profile-title {
-        font-size: 20px;
-    }
-
-    .profile-description {
-        font-size: 14px;
-    }
-
-    a {
-        font-size: 14px;
-    }
+.workout-count {
+    font-size: 4em;
+    font-weight: bold;
+    color: #3457D5;
 }
