--- a/Fitness-App/src/Backend/views/index.ejs
+++ b/Fitness-App/src/Backend/views/index.ejs
@@ -4,6 +4,6 @@
         <title>Test View</title>
     </head>
     <body>
-        Hello <%= locals.text || "Deafult"%>
+        Hello <%= locals.text || "Default"%>
     </body>
 </html>
